# a-mighty-oak-tree-cpp-template

./: CMakeLists.txt  README.md  main.cpp
src/: oak.cpp  oak.hpp
tests/: oak_test.cpp
